feat(PM101): add direct notification for rs-notifier(endpoint to retrieve recipients) TULEAP-248413 TULEAP-248408 TULEAP-248418 TULEAP-248419